# DanteLL

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  all.sh  deb.sh  rel.sh
CMake/: ClangTidy.cmake  CompilerWarnings.cmake  CppCheck.cmake  PreventInSourceBuild.cmake  Sanitizers.cmake
include/: DanteLL.hpp
src/: CMakeLists.txt  DanteLL.cpp
test/: CMakeLists.txt  test.cpp
